@@ -12,11 +12,13 @@ use constant TOP_LEVEL => !exists $ENV{MOD_PERL_2_BUILD};
 
 use ExtUtils::MakeMaker;
 use Symbol;
+use File::Spec::Functions qw(catfile);
+use FindBin;
 
 use Apache::TestMM qw(test); #enable 'make test'
+use Apache::TestRun;
 
 my $VERSION;
-
 
 Apache::TestMM::filter_args();
 
@@ -34,6 +36,8 @@ if (TOP_LEVEL) {
     require "./install-pl";
     add_Apache__test_target();
 }
+
+write_custom_config_file_stub();
 
 WriteMakefile(
     NAME      => 'Apache::Test',
@@ -99,3 +103,17 @@ sub add_Apache__test_target {
         $string;
     };
 }
+
+# write the custom test file so it'll be copied to blib if updated
+# during 'make test' and then installed system-wide
+sub write_custom_config_file_stub {
+    # It doesn't matter whether it gets written under modperl-2.0/lib
+    # or Apache-Test/lib root, since Apache::TestRun uses the same
+    # logic and will update that file with real config data, which
+    # 'make install' will then pick and install system-wide
+    my $path = catfile $FindBin::Bin, "lib",
+        Apache::TestRun::CUSTOM_CONFIG_FILE;
+    # write an empty stub
+    Apache::TestRun::custom_config_write($path, '');
+}
+
